exercises/pingPong/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gw-routes
  namespace: exercises
spec:
  parentRefs:
  - name: pingpong-logoutput-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpong-svc
      port: 456
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: logoutput-svc
      port: 2345
